# file-reorganize

./: README.md  pyproject.toml  requirements.txt  sample_config.yaml
.tmp_dryrun_input/legacy/Astrology Notes/: astrology_natal_profile.md  astrology_transit_report_2024.txt
.tmp_dryrun_input/legacy/Old Files/: project_proposal_alpha.md  receipt_2025_02.csv  tax_invoice_q1_2025.txt
.tmp_dryrun_out/: rename_trace_preview.csv
.tmp_dryrun_out/.organizer_manifests/: manifest_20260403_144811.csv  manifest_20260403_144811.json  state.json  summary_20260403_144811.json  topic_plan_20260403_144802.json
archive/: final_claude_prompt_disk_organizer.md
disk_reorganizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
organizer/: __init__.py  __main__.py  classify.py  config.py  dependencies.py  executor.py  extractors.py  gui_select.py  manifest.py  models.py  planner.py  progress.py  progress_terminal.py  scanner.py  utils.py
