[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-reorganizer"
version = "0.1.0"
description = "Local LLM-powered disk organizer with safe planning and apply modes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Disk ReOrganizer" }]
dependencies = [
  "requests>=2.31.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
]

[project.optional-dependencies]
ocr = [
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
]

[tool.setuptools]
packages = ["organizer"]
